--- a/exp/03_link_route.ipynb
+++ b/exp/03_link_route.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "df_walks = pd.read_sql_query(\"SELECT * FROM walks\", cnx)\n",
     "df_walkers = pd.read_sql_query(\"SELECT * FROM walkers\", cnx)\n",
-    "df_v = pd.read_sql_query(\"SELECT * FROM velocitys\", cnx)"
+    "df_walkers = pd.read_sql_query(\"SELECT * FROM walkers\", cnx)"
    ]
   },
   {
