--- a/exp/[v1.0]04_link_route_contacts.ipynb
+++ b/exp/[v1.0]04_link_route_contacts.ipynb
@@ -193,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({1: 769, 2: 498, 3: 397, 4: 297, 5: 235, 6: 199, 7: 124, 8: 98, 9: 67, 10: 63, 11: 55, 14: 39, 12: 39, 13: 37, 16: 24, 15: 18, 20: 15, 18: 15, 22: 14, 19: 10, 17: 9, 23: 8, 21: 8, 25: 8, 24: 7, 27: 3, 38: 3, 26: 3, 32: 2, 37: 2, 42: 2, 29: 2, 28: 1, 34: 1, 33: 1, 52: 1, 47: 1})\n"
+      "Counter({1: 769, 2: 498, 3: 397, 4: 297, 5: 235, 6: 199, 7: 124, 8: 98, 9: 67, 10: 63, 11: 55, 14: 39, 12: 39, 13: 37, 16: 24, 15: 18, 18: 15, 20: 15, 22: 14, 19: 10, 17: 9, 23: 8, 21: 8, 25: 8, 24: 7, 27: 3, 38: 3, 26: 3, 32: 2, 37: 2, 42: 2, 29: 2, 28: 1, 34: 1, 33: 1, 52: 1, 47: 1})\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,6 +223,7 @@
     "\"\"\"\n",
     "link_list = {}\n",
     "walker_ids = set(df_contacts['walker_id'].tolist())\n",
+    "visited_walker_ids = set()\n",
     "for walker_id1 in walker_ids:\n",
     "    time = sorted(set(df_contacts.loc[df_contacts['walker_id'] == walker_id1]['time'].tolist()))\n",
     "    time1 = time[-1]\n",
@@ -277,13 +278,19 @@
     "            candidate_agent_probs[walker_id2] = utils.get_avg_prob(candidate_agent_probs, walker_id2, new_prob, weight)\n",
     "            \n",
     "    if DEBUG: print(candidate_agent_probs)\n",
-    "        \n",
-    "    link_list[walker_id1] = max(candidate_agent_probs.items(), key=operator.itemgetter(1))[0]"
+    "    \n",
+    "    for k in candidate_agent_probs.keys():\n",
+    "        if k in visited_walker_ids:\n",
+    "            candidate_agent_probs[k] = (0,0)\n",
+    "    correct_walker_id = max(candidate_agent_probs.items(), key=operator.itemgetter(1))[0]\n",
+    "    link_list[walker_id1] = correct_walker_id\n",
+    "    visited_walker_ids.add(correct_walker_id)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -311,29 +318,29 @@
     "        \n",
     "        cyclic = False\n",
     "        for time in rows['walk_time'].tolist():\n",
-    "            if time in time_set:\n",
-    "                cyclic = True\n",
-    "                break\n",
-    "            else:\n",
-    "                time_set.add(time)\n",
+    "#             if time in time_set:\n",
+    "#                 cyclic = True\n",
+    "#                 break\n",
+    "#             else:\n",
+    "#                 time_set.add(time)\n",
+    "            time_set.add(time)\n",
     "        if cyclic:\n",
     "            continue\n",
     "        else:\n",
-    "            tmp = c\n",
     "            df_walks_connected = df_walks_connected.replace({'walker_id': {c: str(new_id) + 'tmp'}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "correct/tried: 1470/1500 98.0%\n",
-      "correct/total: 1470/1500 98.0%\n"
+      "correct/tried: 1487/1500 99.13333333333333%\n",
+      "correct/total: 1487/1500 99.13333333333333%\n"
      ]
     }
    ],
@@ -357,15 +364,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "correct/tried: 1381/1411 97.87384833451452%\n",
-      "correct/total: 1381/1500 92.06666666666666%\n"
+      "base: 1360.0/1500 90.66666666666666\n",
+      "correct/tried: 1486/1499 99.13275517011341%\n",
+      "correct/total: 1486/1500 99.06666666666666%\n"
      ]
     }
    ],
@@ -383,13 +391,14 @@
     "    tried += sum([v if isinstance(k, int) or k[:-3].isdigit() else 0 for k, v in dic.items()])\n",
     "    total += sum([v for v in dic.values()])\n",
     "    df_walks_connected = df_walks_connected.replace({'walker_id': {key[0]: int(real_id)}})\n",
+    "print(f'base: {total - (150 / 10 - 1) * 10}/{total} {(total - (150 / 10 - 1) * 10)/total*100}')\n",
     "print(f'correct/tried: {correct}/{tried} {correct/tried*100}%') \n",
     "print(f'correct/total: {correct}/{total} {correct/total*100}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +542,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1497</th>\n",
-       "      <td>40a22c4b8f22776f2c57</td>\n",
+       "      <td>2</td>\n",
        "      <td>1610445692</td>\n",
        "      <td>177.942956306506</td>\n",
        "      <td>-254.775464507956</td>\n",
@@ -573,18 +582,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                 walker_id   walk_time                  x                  y  \\\n",
-       "0                        0  1610445512   259.317659236627    359.05660181631   \n",
-       "1                        0  1610445692   202.397212678868   261.363709478869   \n",
-       "2                        0  1610445572   240.480428727696   323.581543327113   \n",
-       "3                        0  1610445872   143.555421257707   173.335928671788   \n",
-       "4                        0  1610445932     128.4005590435   143.023171622406   \n",
-       "...                    ...         ...                ...                ...   \n",
-       "1495                     9  1610454332   369.497484101045   -582.12954450743   \n",
-       "1496                     9  1610454452   406.480448994611  -597.809181607441   \n",
-       "1497  40a22c4b8f22776f2c57  1610445692   177.942956306506  -254.775464507956   \n",
-       "1498                     9  1610445632  -296.186285440652   295.461672103098   \n",
-       "1499                     7  1610450312  -154.413516392447   298.592478784003   \n",
+       "     walker_id   walk_time                  x                  y  \\\n",
+       "0            0  1610445512   259.317659236627    359.05660181631   \n",
+       "1            0  1610445692   202.397212678868   261.363709478869   \n",
+       "2            0  1610445572   240.480428727696   323.581543327113   \n",
+       "3            0  1610445872   143.555421257707   173.335928671788   \n",
+       "4            0  1610445932     128.4005590435   143.023171622406   \n",
+       "...        ...         ...                ...                ...   \n",
+       "1495         9  1610454332   369.497484101045   -582.12954450743   \n",
+       "1496         9  1610454452   406.480448994611  -597.809181607441   \n",
+       "1497         2  1610445692   177.942956306506  -254.775464507956   \n",
+       "1498         9  1610445632  -296.186285440652   295.461672103098   \n",
+       "1499         7  1610450312  -154.413516392447   298.592478784003   \n",
        "\n",
        "                                                   json                    id  \\\n",
        "0     {\"resolved\":false,\"location\":{\"latitude\":60.16...  b4ff558e32ebc36ee610   \n",
